--- a/css/our.css
+++ b/css/our.css
@@ -254,3 +254,426 @@ a.TopABtn:hover{
 .gapS3{
 	max-width:820px;
 }
+
+/*-------往期培训--------*/
+.EachTrainCon{
+	padding:2%;
+	margin:auto;
+}
+
+.EachTrainItemCon{
+	width:1000px;
+	margin:auto;
+	text-align:center;
+}
+
+.EachTrainItemFourCon{
+	display: inline-block;
+}
+
+.EachTrainItem{
+	position: relative;	
+	margin-right: 10px;
+	margin-top: 10px;
+}
+
+.EachTrainItemContext{
+	position: absolute;
+	bottom:0;
+	left:0;
+	right: 0;
+	margin:auto;
+	font-size:1rem;
+	color:#fff;
+	font-weight: bold;
+	background-color:#754021;
+	padding:0.6rem 0;
+	opacity: 0.7;
+	filter:alpha(opacity=70);
+	display: none;
+}
+
+.EachTrainItem:hover .EachTrainItemContext{
+	display: block;
+}
+
+.trainBottomInfoCon{
+	margin:auto;
+	width:1000px;
+	margin-top:2rem;
+	text-align: center;
+	position: relative;
+	height:5rem;
+}
+
+.trainBottomInfo{
+	font-size:27px;
+	line-height: 2rem;
+	font-weight: bold;
+	color:#d94512;
+}
+
+.eachTrainImg{
+	position: absolute;
+	bottom: 0;
+	right: 11rem;
+}
+
+/*另一种风格的间隔*/
+.gapFirstOther{
+	font-size:55px;    
+	color: #fff;
+    line-height: 3.8rem;
+    font-weight: bold;
+    letter-spacing: 0.4rem;
+    padding-top: 3.6rem;
+    text-indent: 0.8rem;
+}
+
+.gapSecondTOther{
+	position: relative;	
+	background: #f8d59b;
+}
+
+.gapSecondUlOther{
+
+	list-style: none;
+	margin:auto;
+	display: flex;
+	justify-content: space-around;
+	height: 5rem;
+	align-items: center;
+	background-color: #f8d59b;
+}
+
+/*-----讲师第一部份-----*/
+.TeacherFCon{
+	margin:2% auto;
+}
+
+.TeacherFConInner{
+	margin:auto;
+
+}
+
+.TeacherFourCon{
+	width:100%;
+	text-align: center;
+	margin-top:0.5rem;
+}
+
+.TeacherItem{
+	display: inline-block;
+	margin:auto;
+	margin-right: 0.6rem;
+	margin-top:1rem;
+	width:195px;
+	height: 311px;
+	overflow: hidden;
+	position: relative;
+}
+
+.TeacherItemIntroCon{
+	position: absolute;
+	top:80%;	
+	text-align: left;
+	padding:0.2rem 0.8rem;
+	color:#fff;
+}
+
+.TeacherItemBackDiv{
+	background: #000;
+	position: absolute;
+	opacity: 0.4;
+	filter:alpha(opacity=40);
+	width:100%;
+	height: 100%;
+	top:0;
+	left:0;
+	right: 0;
+	bottom: 0;
+	z-index: -1;
+}
+
+.TeacherName{
+	font-size:28px;
+	line-height: 34px;
+}
+
+.TeacherPosition{
+	font-size: 20px;
+	line-height: 24px;
+}
+
+.TeacherItem:hover .TeacherItemIntroCon{
+	top:55%;
+	bottom:0;
+	transition:all 0.1s ease-in ;
+}
+
+.TeacherIntro{
+	line-height: 18px;
+}
+
+/*----教练---*/
+.CoachCon{
+	margin:3% auto;
+}
+
+.CoachContent{
+	margin:auto;
+	text-align: center;
+}
+
+.CoachItem{
+	display: inline-block;
+	border-radius: 50%;
+	width:188px;
+	height: 188px;
+	overflow: hidden;
+	margin-right: 2.5rem;
+	position: relative;
+}
+
+.CoachItemIntroCon{
+	position: absolute;
+	top:100%;
+	left:0;
+	right:0;
+	color:#fff;
+}
+
+.CoachName{
+	font-size:28px;
+	line-height: 30px;
+}
+
+.CoachPosition{
+	font-size:16px;
+	line-height: 18px;
+}
+
+.CoachItemIntroBack{
+	position: absolute;
+	width:100%;
+	height: 100%;
+	background-color: #000;
+	opacity: 0.3;
+	filter:alpha(opacity=30);
+	z-index: -1;
+}
+
+.CoachItem:hover .CoachItemIntroCon{
+	top:62%;
+	bottom:0;
+	transition:all 0.1s ease-in;
+}
+
+.BrandOuterCon{
+	background-color:#cde2f1;
+	padding:2%;
+}
+
+.BrandCon{
+	width:1100px;
+	margin:auto;
+}
+
+.brandItemImg{
+	float:left;
+	display: block;
+	margin-right: 4px;
+	margin-top:6px;
+	border:1px solid #ccc;
+}
+
+.brandItemImg:hover{
+	box-shadow: 0 0 0.4rem 0.2rem #ccc;
+	border:1px solid #ccc;
+	transition: all 0.2s ease-in;
+	transform: scale(1.2,1.2);
+}
+
+.brand1{
+	width:244px;
+	height: 248px;
+}
+
+.brand2{
+	width:120px;
+	height: 120px;
+}
+
+.brand3{
+	width:244px;
+	height: 120px;
+}
+
+/*-----视频 -----*/
+.VideoOuterCon{
+	margin:3% auto;
+}
+
+.VideoCon{
+	padding:1%;
+	text-align:center;
+	margin:auto;
+}
+
+.videoTitleCon{
+	position: relative;
+}
+
+.videoTitleImg{
+
+}
+
+.videoTitle{
+	position: absolute;
+	top:8%;
+	left:0;
+	right: 0;
+	bottom: 0;
+	margin:auto;
+	font-size:47px;
+	color:#fff;
+	line-height: 50px;
+	font-weight: bold;
+}
+
+.VideoshowCon{
+	margin-top:3%;
+	position: relative;
+}
+
+.gapT4{
+	text-indent: 0;
+	letter-spacing: 0.05rem;
+}
+
+.gapS4
+{
+	max-width:940px;
+}
+
+/*-----诊断-----*/
+.judgeCon{
+	margin:2% auto;
+}
+
+.judgeFourCon{
+	margin:auto;
+	text-align: center;
+}
+
+.judgeFourItem{
+	display: inline-block;
+	margin-right: 0.5rem;
+	width:230px;
+	height: 290px;
+	vertical-align: top;
+}
+
+.judgeFourTitle{
+	font-size: 28px;
+    line-height: 30px;
+    padding:1.4rem 0;
+    font-weight: bold;
+}
+
+.judgeFourUl{
+	margin-top:12%;
+	margin-left:14%;
+	margin-bottom: 8%;
+	text-align: left;
+	font-size:20px;
+	line-height: 24px;
+	height: 110px;
+}
+
+.judgeFourUl li{
+	margin-top:0.2rem;
+}
+
+.jful1 li{
+	color:#4a97cf;
+}
+.jft1{
+	background-color:#4a97cf;
+	color:#fff;
+}
+
+.jfi1{
+	border:1px solid #4a97cf;
+}
+.jb1{
+	background-color:#80b6dd;
+}
+
+.judgeFourText{
+	color:#494948;
+}
+
+.judgeBtnCon{
+	text-align: left;
+}
+
+
+.judgeBtn{
+	display: block;
+    padding: 1rem 1rem;
+    border-radius: 0.6rem;
+    margin-left: 0.5rem;
+    color: #fff;
+    width: 40%;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 1rem;
+}
+
+.jful2 li{
+	color:#e72a86;
+}
+.jft2{
+	background-color:#e72a86;
+	color:#fff;
+}
+
+.jfi2{
+	border:1px solid #e72a86;
+}
+.jb2{
+	background-color:#f396c3;
+}
+
+
+.jful3 li{
+	color:#f0a122;
+}
+.jft3{
+	background-color:#f0a122;
+	color:#fff;
+}
+
+.jfi3{
+	border:1px solid #f0a122;
+}
+.jb3{
+	background-color:#f0ca8d;
+}
+
+
+.jful4 li{
+	color:#55bec5;
+}
+.jft4{
+	background-color:#55bec5;
+	color:#fff;
+}
+
+.jfi4{
+	border:1px solid #55bec5;
+}
+.jb4{
+	background-color:#9bd6da;
+}
