--- a/css/broken.css
+++ b/css/broken.css
@@ -399,6 +399,7 @@
 	width:170px;
 	height: 170px;
 	margin-right: 0.4rem;
+	border:1px solid #ccc;
 }
 
 .hidetraingleD{
@@ -412,11 +413,12 @@
 
 
 .sixdayItem:hover{
-	background-color:#feeb68;
+	/*background-color:#feeb68;*/
 	transform:scale(1.1,1.1);
 	z-index: 10;
 	transition:all 0.4s ease;
-	color:#18315e;
+	/*color:#18315e;*/
+	cursor: pointer;
 }
 
 .sixdayItemhover{
@@ -424,10 +426,11 @@
 	transform:scale(1.1,1.1);
 	z-index: 10;
 	transition:all 0.4s ease;
+	border:1px solid #feeb68;
 	color:#18315e;
 }
 
-.sixdayItem:hover .hidetraingleD
+/*.sixdayItem:hover .hidetraingleD
 {
 	position: absolute;
 	bottom:-7px;
@@ -435,11 +438,11 @@
 	right: 0;
 	margin:auto;
 	display: block;
-}
+}*/
 
-.sixdayItem:hover .sixdayItemImgCon{
+/*.sixdayItem:hover .sixdayItemImgCon{
 	background-position: -72px 0;
-}
+}*/
 
 .hidetraingleDhover{
 	position: absolute;
