--- a/css/common.css
+++ b/css/common.css
@@ -1,13 +1,12 @@
 *{margin:0;padding:0;z-index:1;}
 a{text-decoration:none;}
 
-
 body {
     font: 14px/100%  'Microsft YaHei',arial,"Hiragino Sans GB","Hiragino Sans GB W3";
     _zoom: 1;
 }
 
-.fixedWidth{width:1200px;}
+.fixedWidth{max-width:1200px; min-width: 800px;}
 
 .clear{clear:both;}
 
