--- a/css/sell.css
+++ b/css/sell.css
@@ -102,6 +102,120 @@ html,body{
 	padding-top:4%;
 }
 
+/*------------超级课程------------*/
+
+.courseDay{
+	margin:auto;
+	 margin-top:4%;
+	 text-align: center;
+	 padding-bottom:3%;
+}
+
+
+.courseItem{
+	display: inline-block;
+	margin-right:3rem;
+	background:url(../images/sell/selldayback.png) 0 0 no-repeat;
+	height: 182px;
+	width: 183px;
+	position: relative;
+	text-align: center;
+	color:#0562fd;
+	cursor: pointer;
+}
+
+.courseItemText{
+	position: absolute;
+	top:0;
+	left:0;
+	right: 0;
+	bottom: 0;
+	margin:auto;
+	font-size:25px;
+	line-height: 25px;
+	line-height: 182px;
+}
+
+.courseItem:hover{
+	color:#ad0062;
+	background:url(../images/sell/selldayback.png) -182px 0 no-repeat;
+}
+
+.surperCourseOuterCon{
+	background-color:#d5e5fe;
+}
+
+.surperCourseCon{
+	padding:3% 0;
+	margin:auto;	
+	width:1000px;
+}
+
+.surperCourseItem{
+	width: 242px;
+	margin-right: 5px;
+	margin-top:15px;
+	text-align: center;
+	display: inline-block;
+}
+
+.surperCourseImgCon{
+	background-color: #203f9a;
+}
+
+.surperCourseImgSubTitleCon{
+	position: relative;
+	height: 28px;
+}
+
+.surperCourseImgTitleShadow{
+	background-color:#000;
+	width:100%;
+	height: 28px;
+	opacity: 0.4;
+	filter:alpha(opacity=40);
+	position: absolute;
+	top:0;
+	left:0;
+	right: 0;
+	bottom:0;
+	z-index: -1;
+}
+
+.suerperCourseTitle{
+	color:#fff;
+	font-size: 18px;
+	line-height: 28px;
+	font-weight: bold;
+}
+
+.surperCourseContentCon{
+	padding-top:1rem;
+	background-color: #adcaf9;
+	height: 100px;
+	font-size:17px;
+	line-height: 20px;
+	color:#100763;	
+}
+.surperCourseContentCon p{
+	margin-top:0.4rem;
+}
+
+/*-------------- 课程收获------------------*/
+.gainOuterCon{
+	background-color: #0f0f37;
+	height: 280px;
+}
+
+.gainCon{
+	width: 1200px;
+	text-align: center;
+	padding-top:3%;
+	margin:auto;
+}
+
+
+
 
 /*-----------------教练------------*/
 .coachOuterCon{
